# thaibinh-chatbot

./: .gitignore  Dockerfile  README.md  convert_to_csv.py  docker-compose.yml  neo4j.py  pyproject.toml  requirements.txt
Crud_neo4j/: docs_local.json  docs_local2.json  docs_local4.json  docs_local5.json  docs_local6.json  handle_unstruct_pdf.py  handle_unstructure_pdf.py  main.py  neo4j_client.py  requirements.txt  streamlit.py  test2.py  test_unstruct.py  utils.py
Crud_neo4j/backend/: db.py
Crud_neo4j/input/: Quyết định ban hành Quy chế nhà giáo trẻ tiêu biêu.docx
chatbot_frontend/: Dockerfile
chatbot_frontend/src/: main.py
data/: 1_chunks.csv  1_chunks.json  2_chunks.csv  2_chunks.json  3_chunks.csv  3_chunks.json  4_chunks.csv  4_chunks.json  6_chunks.csv  6_chunks.json  7_chunks.csv  7_chunks.json  8_chunks.csv  8_chunks.json  convert_to_csv.py  merge_csv.py  merged_chunks.csv  testaws.py  update_csv.py  updated_chunks_with_m.csv
src/: build_testset_rag.py  entrypoint.sh  main.py  requirements.txt  save_test.csv  save_test2.csv  test_rag.py
src/agents/: rag_agent.py
src/api/routes/: chat.py  document.py
src/chains/: semantic_search_chunk_chain.py
src/config/: settings.py
src/core/: chunking.py  convert2md.py  embeddings.py  text_splitter.py  vector_store.py
src/llm/: get_graph.py  get_llm.py
src/models/: schemas.py
src/services/: chat_service.py  document_service.py
src/tools/: summary_tool.py  tools.py
src/utils/: async_utils.py
